# CGHomework

./: CGHomework.h  CMakeLists.txt  README.md  notes.txt  notes2.txt  notes3.txt
Results/: antialiasing.ppm  bluegradient.ppm  camera_defocused.ppm  camera_position_orientation_closer_vfov.ppm  camera_vfov.ppm  difuse1.ppm  difuse2_rayBouncLimit.ppm  difuse_lambertian_distribution_ray.ppm  final_image_low_spec.ppm  gamma_correction.ppm  gamma_correction_10%.ppm  glass_sphere_refraction.ppm  glass_sphere_refraction_2.ppm  hallow_glass_sphere.ppm  image7777.ppm  metal_spheres.ppm  metal_spheres_fuzz.ppm  redCircle.ppm  shadedCircle.ppm  sphereList.ppm  tmp.ppm
Results2/: blur.ppm  blur_bvh2.ppm  checkered.ppm  checkered_spheres.ppm  cornel_box_two_boxes.ppm  final_low_quality.ppm  light.ppm  perlin_frequency.ppm  perlin_hermitian_smoothing.ppm  perlin_smoother.ppm  perlin_turbulance.ppm  perlin_vec.ppm  sphere_light.ppm
Results3/: cornelBox1000spp.ppm  cornelBoxPDF.ppm  glass_sphere.ppm  isotropic_obn.ppm  lambertian_pdf_scatter.ppm  light_source.ppm  ligth_10spp.ppm  ligth_10spp_fixed.ppm  multiple_pdfs.ppm  onb.ppm  pdf_class.ppm  pdf_hittable_list.ppm  pdf_mix.ppm  stratifyedg.ppm  stratifying.ppm
src/InOneWeekend/: aabb.h  bvh.h  camera.h  color.h  constant_medium.h  cos_cubed.h  cos_density.h  estimate_halfway.h  hittable.h  hittable_list.h  integrate_x_sq.h  interval.h  main.cpp  material.h  onb.h  pdf.h  perlin.h  quad.h  ray.h  rtw_stb_image.h  rtweekend.h  sphere .h  sphere.h  sphere_importance.h  sphere_plot..h  texture.h  vec3.h
src/TheNextWeek/: camera.h  (+4 more)
